# CHANGELOG
# ---
# * PaypalExpress should use the shipping address, not the billing address [cody]
#
# * Allow overriding the user with Payflow so that a vendor and user can be provided when making requests [cody]
#
# * PayPal DirectPayment API requires a UK County to be sent as the state or province.  Return N/A as the state when one isn't provided to ensure that PayPal doesn't reject the payment [cody]
#
# * Add ability to perform reference transactions with Payflow [Al Evans, cody]
#
# * Enhance recurring Payflow tests and recurring_inquiry [Al Evans]
#
# * Add recurring payments to Payflow [Rick Olson]
#
# * Improve the error message generated by requires! [cody]
#
# * Update credit card regular expressions and update Quickpay gateway with tests for new cards [cody]
#
# * Add support for token based payments to PaymentExpress [Nik Wakelin]
#
# * Refactor default_currency to the base gateway class [cody]
#
# * Clean unsupported characters from the Quickpay ordernum [cody]
#
# * Call the :sale and :authorization in QuickpayGateway [cody]
# 
# * Add Danish gateway Quickpay [cody]
#
# * Remove redundant hash brackets from generator template [cody]
#
# * Add additional options to the PayPal Website Payments Standard Helper [Rick Olson]
#
# * Move generate_unique_id method to Gateway class so other gateways can also use it [cody]
#
# * Allow notification name / value pairs to have a . in the name like checkout.x = 400 [cody]
#
# * Fix PaypalExpressGateway#purchase to have the same method signature as other gateways [cody]
#
# * Cargo cult off the rails unique id generator instead of UUID library [cody]
#
# * Add uuid-1.0.3 for generating random request UUIDs [cody]
#
# * Remove mock_methods and http mock from the library [cody]
#
# * PaypalExpress cannot setup a payment for 0 dollars.  If the amount is zero then setup a payment for $1. [cody]
#
# * Small changes to PslCard gateway [cody]
#
# * Fix Money dependency with PslCard gateway [cody]
#