@@ -44,7 +44,7 @@ module ActiveMerchant #:nodoc:
             xml.tag! 'n2:DoDirectPaymentRequestDetails' do
               xml.tag! 'n2:PaymentAction', action
               xml.tag! 'n2:PaymentDetails' do
-                xml.tag! 'n2:OrderTotal', amount(money), 'currencyID' => currency(money)
+                xml.tag! 'n2:OrderTotal', amount(money), 'currencyID' => options[:currency] || currency(money)
                 xml.tag! 'n2:NotifyURL', options[:notify_url]
                 xml.tag! 'n2:OrderDescription', options[:description]
                 xml.tag! 'n2:InvoiceID', options[:order_id]
