@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Add a currency option to the Payflow and Paypal gateways [cody]
+#
 # * PaypalExpress should use the shipping address, not the billing address [cody]
 #
 # * Allow overriding the user with Payflow so that a vendor and user can be provided when making requests [cody]
